--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,10 @@
 files:
   - inputFile: "/home/markhaur/srt-time-modifier/input/Hz.Omer.S01E01.srt"
     outputFile: "/home/markhaur/srt-time-modifier/output/Hz.Omer.S01E01.srt"
-    modifyValue: -1m
+    offset: -1m
   - inputFile: "/home/markhaur/srt-time-modifier/input/Hz.Omer.S01E24.srt"
     outputFile: "/home/markhaur/srt-time-modifier/output/Hz.Omer.S01E24.srt"
-    modifyValue: -5s
+    offset: -5s
   - inputFile: "/home/markhaur/srt-time-modifier/input/Hz.Omer.S01E25.srt"
     outputFile: "/home/markhaur/srt-time-modifier/output/Hz.Omer.S01E25.srt"
-    modifyValue: -4s
+    offset: -4s
